# PracticaCAP

./: Apartado01.cpp  Apartado02.cpp  Apartado03.cpp  ApartadoA.c++  DataHandler.cpp  DataHandler.h  Datagenerator.cpp  Datagenerator.h  GenerarArchivoBinario.cpp  GenerarSemillasAleatorias.c++  KMeans.cpp  KMeans.h  KmeansEnSerie.c++  LecturaBinaria.c++  LecturaBinaria.cpp  Main.cpp  Point.cpp  Point.h  Practica01.c++  Pruebas.txt  README
BlackboxApartadoA/: generate_points.cpp  kmeans.cpp  kmeans.h  main.cpp  point2D.h
BlackboxPracticaCompleta/: kmeans.cpp  kmeans.h  main.cpp  random_generator.cpp  random_generator.h
ChatGPT_Version2/: Apartado01.cpp  Apartado02.cpp  Apartado03.cpp
Deepseek/: CMakeList.txt  Cluster.cpp  Cluster.h  DataReader.cpp  DataReader.h  KMeansMPI.cpp  KMeansMPI.h  Point.cpp  Point.h  Statistics.cpp  Statistics.h  main.cpp
Deepseek/DSApartadoA/: CMakeLists.txt  Cluster.cpp  Cluster.h  DataReader.cpp  DataReader.h  KMeans.h  Kmeans.cpp  Point.cpp  Point.h  Statistics.cpp  Statistics.h  main.cpp
